# citedhealth-rs

./: Cargo.toml  README.md  demo.tape
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  main.rs  types.rs
tests/: client_test.rs
